--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "TG File Sharing Bot",
+  "name": "Zero file save",
   "description": "file sharing bot store posts and it can access by special links",
   "keywords": [
     "telegram",
     "file",
     "sharing"
   ],
-  "repository": "https://github.com/CodeXBotz/File-Sharing-Bot",
-  "logo": "https://telegra.ph/file/14d3013fda21281c54b61.jpg",
+  "repository": "https://github.com/zerosquad13/zerofiles",
+  "logo": "https://telegra.ph/file/8774ac41f954f2c511342.jpg",
   "env": {
     "TG_BOT_TOKEN": {
       "description": "Your Bot token, Get it from @Botfather",
